# e2e-ML-deployment

./: .gitignore  Makefile  Procfile  README.md  application.py  main.py  notebook.ipynb  pyproject.toml
.ebextensions/: 01_requirements.config
.elasticbeanstalk/: config.yml  instance.config  logs.config
.github/workflows/: cd.yml  ci.yml
App/: drug_app.py  requirements.txt
Model/: drug_pipeline.skops
Results/: metrics.txt
