[project]
name = "e2e-ml-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "awsebcli>=3.25.3",
    "black>=25.12.0",
    "gunicorn>=23.0.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "skops>=0.13.0",
]
